--- a/driver-eksctl.yaml
+++ b/driver-eksctl.yaml
@@ -16,15 +16,15 @@ metadata:
   region: us-west-1
 
 managedNodeGroups:
-# avalanche on lots of small nodes
+# avalanche on large number of small nodes
 - name: t3medium
   instanceType: t3a.medium # 2cpu, 2gmem, 10% discount on AMD CPU
-  desiredCapacity: 300
+  desiredCapacity: 25
   volumeSize: 10
   labels:
     avalanche: yep # referenced by nodeSelector in avalanche deployment
 # prometheus instances on small number of large nodes
-- name: r54xlargeb
+- name: r54xlarge
   instanceType: r5a.4xlarge # 16cpu, 128gmem, 10% discount on AMD CPU
   desiredCapacity: 5
   volumeSize: 10
