Reduce max_inflight_push_requests from 200k to 20k, maybe it'll do something then??
Signed-off-by: Nick Parker <nick@opstrace.com>

--- a/opstrace-kube-overrides.yaml
+++ b/opstrace-kube-overrides.yaml
@@ -23,8 +23,8 @@ data:
       instance_limits:
         # Set a cap on how many push requests can be in-flight at a time.
         # Without this set, one ingester at a time was observed to OOM as pending requests stacked up.
-        # The 200k number is tuned for r5.16xlarge nodes, where OOMing was occurring at around 400k pending requests.
-        # This was weirdly only for one ingester at a time, despite sharding theoretically spreading the work across ingesters evenly.
-        # Meanwhile, once this is set no more backlog seems to appear at all, so maybe the limit helps in other ways?
+        # On r5.16xlarge nodes, OOMing was observed on as few as 121k pending requests, so we go with 20k for now to play it safe.
+        # The issue is typically only for one ingester at a time, despite sharding theoretically spreading the work across ingesters evenly.
+        # Once this is set the effective throughput ceiling seems to greatly increase, so maybe setting a limit helps performance?
         # See also system tenant metric: 'sum(cortex_inflight_requests{route="/cortex.Ingester/Push",service="ingester"}) by (pod)'
-        max_inflight_push_requests: 200000 # controller: unset, default: 0/unlimited
+        max_inflight_push_requests: 20000 # controller: unset, default: 0/unlimited
