--- a/driver-eksctl.yaml
+++ b/driver-eksctl.yaml
@@ -8,6 +8,12 @@
 # Scale a nodegroup with:
 #   COUNT=10
 #   eksctl scale nodegroup -r us-west-1 --cluster nick-scaletest-driver -n t3medium --nodes $COUNT --nodes-min $COUNT --nodes-max $COUNT
+# Delete a nodegroup:
+#   Delete the corresponding CloudFormation stack in the AWS Dashboard
+#   The nodes will automatically be decommissioned and any resident pods will be moved off of them
+# Delete the cluster:
+#   Delete all nodegroup CF stacks, THEN delete the cluster CF stack
+#   Deleting the cluster CF stack before the node CF stacks SHOULD fail
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
@@ -16,17 +22,33 @@ metadata:
   region: us-west-1
 
 managedNodeGroups:
-# avalanche on large number of small nodes
+
+# 1. avalanche on large number of small nodes
+
+# this fits about four avalanches per node, with five prometheuses running
+# if there are seven prometheuses then four avalanches is too many and there will be evictions
+# (apparently mem usage is somehow proportional to the number of prometheuses querying)
 - name: t3medium
   instanceType: t3a.medium # 2cpu, 2gmem, 10% discount on AMD CPU
-  desiredCapacity: 25
+  desiredCapacity: 50
   volumeSize: 10
   labels:
     avalanche: yep # referenced by nodeSelector in avalanche deployment
-# prometheus instances on small number of large nodes
-- name: r54xlarge
-  instanceType: r5a.4xlarge # 16cpu, 128gmem, 10% discount on AMD CPU
-  desiredCapacity: 5
+
+# 2. prometheus instances on small number of large nodes
+
+# this size is sufficient for <= 75 avalanches:
+#- name: r54xlarge
+#  instanceType: r5a.4xlarge # 16cpu, 128gmem, 10% discount on AMD CPU
+#  desiredCapacity: 5 # can fit one prometheus per node
+#  volumeSize: 10
+#  labels:
+#    prometheus: yep # referenced by nodeSelector in prom deployment
+
+# for >= 100 avalanches, should do this:
+- name: r58xlarge
+  instanceType: r5a.8xlarge # 32cpu, 256gmem, 10% discount on AMD CPU
+  desiredCapacity: 10 # can fit one prometheus per node
   volumeSize: 10
   labels:
     prometheus: yep # referenced by nodeSelector in prom deployment
