--- a/opstrace-cluster-uswest2-r516xlarge.yaml
+++ b/opstrace-cluster-uswest2-r516xlarge.yaml
@@ -5,9 +5,8 @@ tenants:
 # - 1-6 nodes get 3 compactors
 # - 7-9 nodes get 5 compactors
 # - 10+ nodes get roundDownToNearestOddNumber(nodes/2) compactors
-# But any given tenant may be assigned to a single compactor so this may not help scaling within a tenant
 node_count: 9
 cert_issuer: letsencrypt-prod
 aws:
-  instance_type: r5.16xlarge
+  instance_type: r5.16xlarge # 64cpu, 512mem
   region: us-west-2
