Add driver definitions (same except for region), rename opstrace files to reflect regions, set initial driver prom replicas to 1
Signed-off-by: Nick Parker <nick@opstrace.com>

--- a/opstrace-cluster-euwest3-18nodes.yaml
+++ b/opstrace-cluster-euwest3-18nodes.yaml
@@ -9,4 +9,4 @@ node_count: 18 # same total cpu/mem as 9 x r5.16xlarge
 cert_issuer: letsencrypt-prod
 aws:
   instance_type: r5.8xlarge # 32cpu, 256mem
-  region: us-east-1
+  region: eu-west-3
