Give better explanation for needing max_inflight_push_requests

--- a/opstrace-kube-overrides.yaml
+++ b/opstrace-kube-overrides.yaml
@@ -45,8 +45,9 @@ data:
       # Set a cap on how many push requests can be in-flight at a time.
       # Without this set, one ingester at a time was observed to OOM as pending requests stacked up.
       # On r5.16xlarge nodes, OOMing was observed on as few as 121k pending requests, so we go with 20k for now to play it safe.
+      # After OOMing, the ingester takes a long time to come back, since it needs to recover its WAL,
+      # resulting in a potential loop of ingesters going down until incoming load has been decreased.
       # The issue is typically only for one ingester at a time, despite sharding theoretically spreading the work across ingesters evenly.
-      # Once this is set the effective throughput ceiling seems to greatly increase, so maybe setting a limit helps performance?
       # See also system tenant metric:
       #    sum(cortex_inflight_requests{route="/cortex.Ingester/Push",service="ingester"}) by (pod)
       # Can validate that this setting is actually working by checking config metrics:
